--- a/Images/Makefile.am
+++ b/Images/Makefile.am
@@ -1,5 +1,5 @@
-GIFS = DeepwoodsBanner.gif base.gif ffront.gif ffrontSmall.gif finger.gif \
-	fside.gif fsideSmall.gif handle.gif left.gif right.gif
+GIFS = AmazonLogo.gif DeepwoodsBanner.gif base.gif ffront.gif ffrontSmall.gif \
+	finger.gif fside.gif fsideSmall.gif handle.gif left.gif right.gif
 
 EXTRA_DIST = $(GIFS)
 
