--- a/Documentation/Makefile.in
+++ b/Documentation/Makefile.in
@@ -146,7 +146,7 @@ USERMAN_TEXS = UserManual.tex Preface.tex Introduction.tex Reference.tex \
 		Tutorial.tex Help.tex COPYING.tex MyTitlepage.sty \
 		titlepage.tex
 
-USERMAN_FIGS = 
+USERMAN_FIGS = MainWindow.png CardCatDrawer.png
 USERMAN = UserManual
 USERMAN_PDF = $(USERMAN).pdf
 USERMANHBase = UserManual
